--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@ h1{
     color: purple;
     
 }
+h2{
+    font-size: 40px;
+    color: purple;
+}
 h3{
     color: orange;
     font-size: 30px;
@@ -60,4 +64,30 @@ p{
 }
 .contact-btn :hover a{
     color: red;
+}
+
+/* 3 NUMBER SECTION ABOUT ITEM */
+.experience-area{
+    background-image: url(../img/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    box-shadow: gray 10px 10px 30px;
+    border-radius: 12px;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 2%;
+}
+.border-left{
+    border-left: solid orange 10px;
+}
+.border-right{
+    border-left: solid rgb(37, 56, 228) 10px;
+}
+
+/* FOOTER SECTION  */
+.footerr{
+    text-align: center;
 }
